--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,3 +8,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Say Hello
+        run: echo "Hello from your CI/CD pipeline!"
